What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

October 1, 2011
+ [vincent] fix output when --disable-shared or --disable-static is passed to configure. Minor fix for jpwl compilation.

September 9, 2011
+ [antonin] added a new indexer functionality to the library. With the new '-jpip' option at encoding, the user can now generate a JP2 file including an XML box with the index used when browsing the image with JPIP. 

September 2, 2011
! [mickael] correct nightly crash on all platform linked to merge operation and missing opj_getopt command

September 1st, 2011
! [antonin] renamed getopt.{c/h} to opj_getopt.{c/h} and forced the use of these files rather than the system ones. This fixed issue 78. Credit to Winfried.

August 31, 2011
* [mickael] fixed a segfault with fgets return value for some cases inside test function compare_dump_file()
+ [mickael] enhance the encoding test suite and remove unsued CONFIGURE_FILE into a CMakeList

August 30, 2011
+ [mickael] added first version of the encoding tests suite

August 16, 2011
+ [antonin] added NEWS, AUTHORS and THANKS files. Cosmetic changes in autotools files.
- [antonin] removed obsolete testing directory and *.nix files
* [antonin] fixed cmake support for openjpip

August 15, 2011
* [antonin] fixed a bug in autotools files that prevented libfcgi to be correctly found in some cases (patch from V.Torri).

August 12, 2011
+ [antonin] added cmake support to openjpip

August 11, 2011
* [mickael] Fixed issue #76
* [antonin] minor bug fix in configure.ac (credit to Vincent Torri)
! [mickael] backport rev[824-834] and rev[837-859] into the openjpeg-1.5 branch 

August 9, 2011
- [antonin] removed xcode project files (cmake and autotools are now the only supported build methods)

July 23, 2011
+ [vtorri] Fixed issue #74.
+ [vtorri] Added libpng 1.5 detection. Dropped libpng 1.0.* explicit detection (we are in 2011 !). Patch by Winfried.

July 13, 2011
+ [vtorri] added 'libopenjpeg-jpwl.pc.in'